# push_swap

./: .gitmodules  CMakeLists.txt  Makefile  README.md  author  checker  push_swap  test
gui/: main.py  ps_board.py  ps_main.py  ps_operation.py  ps_settings.py  ps_themes.py  ps_window.py
gui/ui/: ps_settings.ui  ps_window.ui
includes/: push_swap.h
src/: checker.c  information.c  parse_arg.c  push_swap.c  sort.c  sort_part_1.c  sort_part_2.c  stack.c  stack_operation.c
